--- a/contact/contact.html
+++ b/contact/contact.html
@@ -1,140 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNVO Health</title>
-    <link rel="stylesheet" href="contact_style.css">
-    <link rel="stylesheet" href="/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-</head>
+    <link rel="stylesheet" href="contact_style.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <div id="contact">
-
-        <div id="navbar">
-            <nav>
-                <div id="logo">UNVO Health</div>
-                <div id="links">
-                    <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/event/event.html">Events</a></li>
-                        <li id="news"><a href="#">Products</a>
-                            <ul id="news_dropdown">
-                                <li id="pmr"><a href="/product/product1.html">Physical Medicine and Rehabilitation </a>
-                                    <ul id="product_dropdown">
-                                        <li>Smart Robotic Series</li>
-                                        <li>Electrtotherapy</li>
-                                        <li>Passive and Active Exerciser</li>
-                                        <li>Physical Training</li>
-                                        <li>Heat and Cold Therapy</li>
-                                        <li>Balance Evaluation Series</li>
-                                        <li>Treatment Table</li>
-                                        <li>Tilt Table</li>
-                                        <li>Gait Training Device</li>
-                                        <li>Hydrotherapy</li>
-                                        <li>Air Compression Therapy</li>
-                                    </ul>
-                                </li>
-                                <li id="simulation"><a href="/product/product2.html">Simulation Products</a>
-                                    <ul id="product_dropdown2">
-                                        <li>Medical Series</li>
-                                        <li>Skeleton Series</li>
-                                        <li>Torso Series</li>
-                                        <li>Anatomical Series</li>
-                                        <li>Acupuncture Series</li>
-                                        <li>Biology Series</li>
-                                        <li>furniture Series</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="/contact/contact.html" class="active">Contact Us</a></li>
+      <div id="navbar">
+        <nav>
+          <div id="logo">UNVO Health</div>
+          <div id="links">
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/event/event.html">Events</a></li>
+              <li id="news">
+                <a href="#">Products</a>
+                <ul id="news_dropdown">
+                  <li id="pmr">
+                    <a href="/product/product1.html"
+                      >Physical Medicine and Rehabilitation
+                    </a>
+                    <ul id="product_dropdown">
+                      <li>Smart Robotic Series</li>
+                      <li>Electrtotherapy</li>
+                      <li>Passive and Active Exerciser</li>
+                      <li>Physical Training</li>
+                      <li>Heat and Cold Therapy</li>
+                      <li>Balance Evaluation Series</li>
+                      <li>Treatment Table</li>
+                      <li>Tilt Table</li>
+                      <li>Gait Training Device</li>
+                      <li>Hydrotherapy</li>
+                      <li>Air Compression Therapy</li>
                     </ul>
-                </div>
-                <div id="menu">
-                    <i class="ri-menu-3-line"></i>
-                </div>
-                <div id="close">
-                    <i class="ri-close-large-line"></i>
-                </div>
-            </nav>
-        </div>
+                  </li>
+                  <li id="simulation">
+                    <a href="/product/product2.html">Simulation Products</a>
+                    <ul id="product_dropdown2">
+                      <li>Medical Series</li>
+                      <li>Skeleton Series</li>
+                      <li>Torso Series</li>
+                      <li>Anatomical Series</li>
+                      <li>Acupuncture Series</li>
+                      <li>Biology Series</li>
+                      <li>furniture Series</li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="/contact/contact.html" class="active">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <div id="menu">
+            <i class="ri-menu-3-line"></i>
+          </div>
+          <div id="close">
+            <i class="ri-close-large-line"></i>
+          </div>
+        </nav>
+      </div>
 
-        <h1>Contact Us</h1>
-        <div id="contact_us">
-            <div id="map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3017.5040743053555!2d-80.29901882425042!3d40.860810783230725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883477e8dd840397%3A0x82075879995c97b1!2s800%20Commercial%20Ave%2C%20Ellwood%20City%2C%20PA%2016117%2C%20USA!5e0!3m2!1sen!2sin!4v1731563433752!5m2!1sen!2sin"
-                    style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <div id="address">
-                <div id="address_name">
-                    <div id="address_icon">
-                        <div>
-                            <i class="ri-map-pin-2-fill"></i>
-                        </div>
-                        <div>
-                            <h2>Head Office</h2>
-                            <p>RPI INTERNATIONAL INC (USA), 800 Commercial Ave, Ellwood City, Pennsylvania, 16117,
-                                United States</p>
-                        </div>
-                    </div>
-                    <div id="address_icon">
-                        <div>
-                            <i class="ri-building-fill"></i>
-                        </div>
-                        <div>
-                            <h2>Global Supply Office</h2>
-                            <p>Univero Singapore, Marina Bay Street Circuit, Downtown Core, Central, Singapore 119587
-                            </p>
-                        </div>
-                    </div>
-                    <div id="address_icon">
-                        <div>
-                            <i class="ri-mail-fill"></i>
-                        </div>
-                        <div>
-                            <h2>Email</h2>
-                            <p>contact@uno-health.com</p>
-                        </div>
-                    </div>
-                    <div id="address_icon">
-                        <div>
-                            <i class="ri-earth-fill"></i>
-                        </div>
-                        <div>
-                            <h2>Website</h2>
-                            <p>www.unvo-health.com</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <h1>Contact Us</h1>
+      <div id="contact_us">
+        <div id="map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3017.5040743053555!2d-80.29901882425042!3d40.860810783230725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883477e8dd840397%3A0x82075879995c97b1!2s800%20Commercial%20Ave%2C%20Ellwood%20City%2C%20PA%2016117%2C%20USA!5e0!3m2!1sen!2sin!4v1731563433752!5m2!1sen!2sin"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-
-        <div id="footer_panel">
-            <div id="footer_panel_container">
-                <div id="footer_panel2">
-                    <div>
-                        <h2>Contact</h2>
-                    </div>
-                    <div>
-                        <p><span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800 Commercial Ave, Ellwood City, Pennsylvania, 16117,
-                            United States</p>
-                        <p><span>
-                            Global Supply Office</span> : Univero Singapore, Marina Bay Street Circuit, Downtown Core, Central, Singapore 119587</p>
-                        <p><span>Email</span> : contact@uno-health.com</p>
-                        <p><span>Website</span> : www.unvo-health.com</p>
-                    </div>
-                </div>
+        <div id="address">
+          <div id="address_name">
+            <div id="address_icon">
+              <div>
+                <i class="ri-map-pin-2-fill"></i>
+              </div>
+              <div>
+                <h2>Head Office</h2>
+                <p>
+                  RPI INTERNATIONAL INC (USA), 800 Commercial Ave, Ellwood City,
+                  Pennsylvania, 16117, United States
+                </p>
+              </div>
             </div>
+            <div id="address_icon">
+              <div>
+                <i class="ri-building-fill"></i>
+              </div>
+              <div>
+                <h2>Global Supply Office</h2>
+                <p>
+                  Univero Singapore, Marina Bay Street Circuit, Downtown Core,
+                  Central, Singapore 119587
+                </p>
+              </div>
+            </div>
+            <div id="address_icon">
+              <div>
+                <i class="ri-mail-fill"></i>
+              </div>
+              <div>
+                <h2>Email</h2>
+                <p>contact@unvo-health.com</p>
+              </div>
+            </div>
+            <div id="address_icon">
+              <div>
+                <i class="ri-earth-fill"></i>
+              </div>
+              <div>
+                <h2>Website</h2>
+                <p>www.unvo-health.com</p>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
 
+      <div id="footer_panel">
+        <div id="footer_panel_container">
+          <div id="footer_panel2">
+            <div>
+              <h2>Contact</h2>
+            </div>
+            <div>
+              <p>
+                <span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800
+                Commercial Ave, Ellwood City, Pennsylvania, 16117, United States
+              </p>
+              <p>
+                <span> Global Supply Office</span> : Univero Singapore, Marina
+                Bay Street Circuit, Downtown Core, Central, Singapore 119587
+              </p>
+              <p><span>Email</span> : contact@unvo-health.com</p>
+              <p><span>Website</span> : www.unvo-health.com</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="/script.js"></script>
-</body>
-
+  </body>
 </html>
