fixed everywhere mail

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNVO Health</title>
-    <link rel="stylesheet" href="/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<script>
-    emailjs.init("-edgX2BkCVe2xW2vy"); // Replace with your EmailJS user ID
-</script>
+    <link rel="stylesheet" href="/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet" />
+    <script
+      type="text/javascript"
+      src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+      emailjs.init("-edgX2BkCVe2xW2vy"); // Replace with your EmailJS user ID
+    </script>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script>
@@ -18,145 +21,174 @@
             emailjs.init("-edgX2BkCVe2xW2vy"); // Replace with your EmailJS user ID
         })();
     </script> -->
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="main">
-        <div id="header">
-            <div id="navbar">
-                <nav>
-                    <div id="logo">UNVO Health</div>
-                    <div id="links">
-                        <ul>
-                            <li><a href="/" class="active">Home</a></li>
-                            <li><a href="/event/event.html">Events</a></li>
-                            <li id="news"><a href="#">Products</a>
-                                <ul id="news_dropdown">
-                                    <li id="pmr"><a href="/product/product1.html">Physical Medicine and Rehabilitation
-                                        </a>
-                                        <ul id="product_dropdown">
-                                            <li>Smart Robotic Series</li>
-                                            <li>Electrtotherapy</li>
-                                            <li>Passive and Active Exerciser</li>
-                                            <li>Physical Training</li>
-                                            <li>Heat and Cold Therapy</li>
-                                            <li>Balance Evaluation Series</li>
-                                            <li>Treatment Table</li>
-                                            <li>Tilt Table</li>
-                                            <li>Gait Training Device</li>
-                                            <li>Hydrotherapy</li>
-                                            <li>Air Compression Therapy</li>
-                                        </ul>
-                                    </li>
-                                    <li id="simulation"><a href="/product/product2.html">Simulation Products</a>
-                                        <ul id="product_dropdown2">
-                                            <li>Medical Series</li>
-                                            <li>Skeleton Series</li>
-                                            <li>Torso Series</li>
-                                            <li>Anatomical Series</li>
-                                            <li>Acupuncture Series</li>
-                                            <li>Biology Series</li>
-                                            <li>furniture Series</li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a href="/contact/contact.html">Contact Us</a></li>
-                        </ul>
-                    </div>
-                    <div id="menu">
-                        <i class="ri-menu-3-line"></i>
-                    </div>
-                    <div id="close">
-                        <i class="ri-close-large-line"></i>
-                    </div>
-                </nav>
+      <div id="header">
+        <div id="navbar">
+          <nav>
+            <div id="logo">UNVO Health</div>
+            <div id="links">
+              <ul>
+                <li><a href="/" class="active">Home</a></li>
+                <li><a href="/event/event.html">Events</a></li>
+                <li id="news">
+                  <a href="#">Products</a>
+                  <ul id="news_dropdown">
+                    <li id="pmr">
+                      <a href="/product/product1.html"
+                        >Physical Medicine and Rehabilitation
+                      </a>
+                      <ul id="product_dropdown">
+                        <li>Smart Robotic Series</li>
+                        <li>Electrtotherapy</li>
+                        <li>Passive and Active Exerciser</li>
+                        <li>Physical Training</li>
+                        <li>Heat and Cold Therapy</li>
+                        <li>Balance Evaluation Series</li>
+                        <li>Treatment Table</li>
+                        <li>Tilt Table</li>
+                        <li>Gait Training Device</li>
+                        <li>Hydrotherapy</li>
+                        <li>Air Compression Therapy</li>
+                      </ul>
+                    </li>
+                    <li id="simulation">
+                      <a href="/product/product2.html">Simulation Products</a>
+                      <ul id="product_dropdown2">
+                        <li>Medical Series</li>
+                        <li>Skeleton Series</li>
+                        <li>Torso Series</li>
+                        <li>Anatomical Series</li>
+                        <li>Acupuncture Series</li>
+                        <li>Biology Series</li>
+                        <li>furniture Series</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li><a href="/contact/contact.html">Contact Us</a></li>
+              </ul>
             </div>
-
-            <div id="section">
-                <div class="section_first">
-                    <div class="section_second">
-                        <h1>UNVO Health</h1>
-                        <p>RPI INTERNATIONAL INC is a leading supplier of Predictive Maintenance and Reliability (PMR) products
-                            and Simulation technologies, providing innovative solutions that enhance the efficiency,
-                            reliability, and performance of industrial operations. With a strong commitment to
-                            delivering high-quality, cutting-edge products, we enable businesses across multiple sectors
-                            to minimize downtime, optimize maintenance strategies, and simulate complex systems to make
-                            data-driven decisions that drive success.</p>
-                    </div>
-                </div>
+            <div id="menu">
+              <i class="ri-menu-3-line"></i>
             </div>
+            <div id="close">
+              <i class="ri-close-large-line"></i>
+            </div>
+          </nav>
         </div>
 
-        <div id="gallery">
-            <div id="gallery_section">
-                <h1>Gallery</h1>
-                <div id="gallery_image">
-                    <img src="/images/gallery1.jpg" alt="">
-                    <img src="/images/gallery2.png" alt="">
-                    <img src="/images/gallery3.png" alt="">
-                    <img src="/images/gallery4.jpg" alt="">
-                </div>
+        <div id="section">
+          <div class="section_first">
+            <div class="section_second">
+              <h1>UNVO Health</h1>
+              <p>
+                RPI INTERNATIONAL INC is a leading supplier of Predictive
+                Maintenance and Reliability (PMR) products and Simulation
+                technologies, providing innovative solutions that enhance the
+                efficiency, reliability, and performance of industrial
+                operations. With a strong commitment to delivering high-quality,
+                cutting-edge products, we enable businesses across multiple
+                sectors to minimize downtime, optimize maintenance strategies,
+                and simulate complex systems to make data-driven decisions that
+                drive success.
+              </p>
             </div>
+          </div>
         </div>
+      </div>
 
-        <div id="about">
-            <div id="about_container">
-                <h1>About Us</h1>
-                <div id="about_us">
-                    <div id="about_img">
-                        <img src="/images/10.jpg" alt="">
-                    </div>
-                    <div id="about_details">
-                        <p>Hospital needs are one of the most essential things to be bought and maintained well. 
-                            We RPI INTERNATIONAL INC situated at United States therefore, have the best of
-                            Physical Medicine and Rehabilitation (PMR) and Simulation Products to get the best result and make work easier. Our products
-                            retain a high reputation for quality, excellence & innovation. We are dedicated to providing
-                            the best equipment to enhance the proficiently of the medical practice. Medical
-                            professionals find our products to be high in quality, ensuring us an ever increasing client
-                            base.</p>
-                    </div>
-                </div>
-            </div>
+      <div id="gallery">
+        <div id="gallery_section">
+          <h1>Gallery</h1>
+          <div id="gallery_image">
+            <img src="/images/gallery1.jpg" alt="" />
+            <img src="/images/gallery2.png" alt="" />
+            <img src="/images/gallery3.png" alt="" />
+            <img src="/images/gallery4.jpg" alt="" />
+          </div>
         </div>
+      </div>
 
-        <div id="footer">
-            <div id="form">
-                <form id="contact-form">
-                    <div id="form_main">
-                        <div id="form_input">
-                            <input type="text" placeholder="Full Name" id="sendername" required>
-                            <input type="number" id="number" placeholder="Mobile No." required />
-                            <input type="email" placeholder="Email" id="email" required>
-                        </div>
-                        <div id="form_message">
-                            <textarea placeholder="Message" id="message" required></textarea>
-                        </div>
-                    </div>
-                    <button type="submit" id="submit">Submit</button>
-                </form>
+      <div id="about">
+        <div id="about_container">
+          <h1>About Us</h1>
+          <div id="about_us">
+            <div id="about_img">
+              <img src="/images/10.jpg" alt="" />
             </div>
-            <div id="footer_panel">
-                <div id="footer_panel_container">
-                    <div id="footer_panel2">
-                        <div>
-                            <h2>Contact</h2>
-                        </div>
-                        <div>
-                            <p><span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800 Commercial Ave, Ellwood City, Pennsylvania, 16117,
-                                United States</p>
-                            <p><span>
-                                Global Supply Office</span> : Univero Singapore, Marina Bay Street Circuit, Downtown Core, Central, Singapore 119587</p>
-                            <p><span>Email</span> : contact@uno-health.com</p>
-                            <p><span>Website</span> : www.unvo-health.com</p>
-                        </div>
-                    </div>
-                </div>
+            <div id="about_details">
+              <p>
+                Hospital needs are one of the most essential things to be bought
+                and maintained well. We RPI INTERNATIONAL INC situated at United
+                States therefore, have the best of Physical Medicine and
+                Rehabilitation (PMR) and Simulation Products to get the best
+                result and make work easier. Our products retain a high
+                reputation for quality, excellence & innovation. We are
+                dedicated to providing the best equipment to enhance the
+                proficiently of the medical practice. Medical professionals find
+                our products to be high in quality, ensuring us an ever
+                increasing client base.
+              </p>
             </div>
+          </div>
         </div>
+      </div>
+
+      <div id="footer">
+        <div id="form">
+          <form id="contact-form">
+            <div id="form_main">
+              <div id="form_input">
+                <input
+                  type="text"
+                  placeholder="Full Name"
+                  id="sendername"
+                  required />
+                <input
+                  type="number"
+                  id="number"
+                  placeholder="Mobile No."
+                  required />
+                <input type="email" placeholder="Email" id="email" required />
+              </div>
+              <div id="form_message">
+                <textarea
+                  placeholder="Message"
+                  id="message"
+                  required></textarea>
+              </div>
+            </div>
+            <button type="submit" id="submit">Submit</button>
+          </form>
+        </div>
+        <div id="footer_panel">
+          <div id="footer_panel_container">
+            <div id="footer_panel2">
+              <div>
+                <h2>Contact</h2>
+              </div>
+              <div>
+                <p>
+                  <span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800
+                  Commercial Ave, Ellwood City, Pennsylvania, 16117, United
+                  States
+                </p>
+                <p>
+                  <span> Global Supply Office</span> : Univero Singapore, Marina
+                  Bay Street Circuit, Downtown Core, Central, Singapore 119587
+                </p>
+                <p><span>Email</span> : contact@unvo-health.com</p>
+                <p><span>Website</span> : www.unvo-health.com</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="/script.js"></script>
-</body>
-
+  </body>
 </html>
