--- a/product/product1.html
+++ b/product/product1.html
@@ -1,113 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNVO Health</title>
-    <link rel="stylesheet" href="/product/product.css">
-    <link rel="stylesheet" href="/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-</head>
+    <link rel="stylesheet" href="/product/product.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <div id="product1">
-        <div id="navbar">
-            <nav>
-                <div id="logo">UNVO Health</div>
-                <div id="links">
-                    <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/event/event.html">Events</a></li>
-                        <li id="news"><a href="#" class="active">Products</a>
-                            <ul id="news_dropdown">
-                                <li id="pmr"><a href="/product/product1.html" class="active">Physical Medicine and
-                                        Rehabilitation </a>
-                                    <ul id="product_dropdown">
-                                        <li>Smart Robotic Series</li>
-                                        <li>Electrtotherapy</li>
-                                        <li>Passive and Active Exerciser</li>
-                                        <li>Physical Training</li>
-                                        <li>Heat and Cold Therapy</li>
-                                        <li>Balance Evaluation Series</li>
-                                        <li>Treatment Table</li>
-                                        <li>Tilt Table</li>
-                                        <li>Gait Training Device</li>
-                                        <li>Hydrotherapy</li>
-                                        <li>Air Compression Therapy</li>
-                                    </ul>
-                                </li>
-                                <li id="simulation"><a href="/product/product2.html">Simulation Products</a>
-                                    <ul id="product_dropdown2">
-                                        <li>Medical Series</li>
-                                        <li>Skeleton Series</li>
-                                        <li>Torso Series</li>
-                                        <li>Anatomical Series</li>
-                                        <li>Acupuncture Series</li>
-                                        <li>Biology Series</li>
-                                        <li>furniture Series</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="/contact/contact.html">Contact Us</a></li>
+      <div id="navbar">
+        <nav>
+          <div id="logo">UNVO Health</div>
+          <div id="links">
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/event/event.html">Events</a></li>
+              <li id="news">
+                <a href="#" class="active">Products</a>
+                <ul id="news_dropdown">
+                  <li id="pmr">
+                    <a href="/product/product1.html" class="active"
+                      >Physical Medicine and Rehabilitation
+                    </a>
+                    <ul id="product_dropdown">
+                      <li>Smart Robotic Series</li>
+                      <li>Electrtotherapy</li>
+                      <li>Passive and Active Exerciser</li>
+                      <li>Physical Training</li>
+                      <li>Heat and Cold Therapy</li>
+                      <li>Balance Evaluation Series</li>
+                      <li>Treatment Table</li>
+                      <li>Tilt Table</li>
+                      <li>Gait Training Device</li>
+                      <li>Hydrotherapy</li>
+                      <li>Air Compression Therapy</li>
                     </ul>
-                </div>
-                <div id="menu">
-                    <i class="ri-menu-3-line"></i>
-                </div>
-                <div id="close">
-                    <i class="ri-close-large-line"></i>
-                </div>
-            </nav>
-        </div>
-
-        <div id="product_main">
-            <div id="product1_container">
-                <div id="product_sidenav">
-                    <h1>Physical Medicine and Rehabilitation</h1>
-                    <ul>
-                        <li>Smart Robotic Series</li>
-                        <li>Electrtotherapy</li>
-                        <li>Passive and Active Exerciser</li>
-                        <li>Physical Training</li>
-                        <li>Heat and Cold Therapy</li>
-                        <li>Balance Evaluation Series</li>
-                        <li>Treatment Table</li>
-                        <li>Tilt Table</li>
-                        <li>Gait Training Device</li>
-                        <li>Hydrotherapy</li>
-                        <li>Air Compression Therapy</li>
+                  </li>
+                  <li id="simulation">
+                    <a href="/product/product2.html">Simulation Products</a>
+                    <ul id="product_dropdown2">
+                      <li>Medical Series</li>
+                      <li>Skeleton Series</li>
+                      <li>Torso Series</li>
+                      <li>Anatomical Series</li>
+                      <li>Acupuncture Series</li>
+                      <li>Biology Series</li>
+                      <li>furniture Series</li>
                     </ul>
-                </div>
-                <div id="products">
-                    <div id="product_name"></div>
-                </div>
-            </div>
-        </div>
+                  </li>
+                </ul>
+              </li>
+              <li><a href="/contact/contact.html">Contact Us</a></li>
+            </ul>
+          </div>
+          <div id="menu">
+            <i class="ri-menu-3-line"></i>
+          </div>
+          <div id="close">
+            <i class="ri-close-large-line"></i>
+          </div>
+        </nav>
+      </div>
 
-        <div id="footer_panel">
-            <div id="footer_panel_container">
-                <div id="footer_panel2">
-                    <div>
-                        <h2>Contact</h2>
-                    </div>
-                    <div>
-                        <p><span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800 Commercial Ave, Ellwood City, Pennsylvania, 16117,
-                            United States</p>
-                        <p><span>
-                            Global Supply Office</span> : Univero Singapore, Marina Bay Street Circuit, Downtown Core, Central, Singapore 119587</p>
-                        <p><span>Email</span> : contact@uno-health.com</p>
-                        <p><span>Website</span> : www.unvo-health.com</p>
-                    </div>
-                </div>
-            </div>
+      <div id="product_main">
+        <div id="product1_container">
+          <div id="product_sidenav">
+            <h1>Physical Medicine and Rehabilitation</h1>
+            <ul>
+              <li>Smart Robotic Series</li>
+              <li>Electrtotherapy</li>
+              <li>Passive and Active Exerciser</li>
+              <li>Physical Training</li>
+              <li>Heat and Cold Therapy</li>
+              <li>Balance Evaluation Series</li>
+              <li>Treatment Table</li>
+              <li>Tilt Table</li>
+              <li>Gait Training Device</li>
+              <li>Hydrotherapy</li>
+              <li>Air Compression Therapy</li>
+            </ul>
+          </div>
+          <div id="products">
+            <div id="product_name"></div>
+          </div>
         </div>
-        
+      </div>
+
+      <div id="footer_panel">
+        <div id="footer_panel_container">
+          <div id="footer_panel2">
+            <div>
+              <h2>Contact</h2>
+            </div>
+            <div>
+              <p>
+                <span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800
+                Commercial Ave, Ellwood City, Pennsylvania, 16117, United States
+              </p>
+              <p>
+                <span> Global Supply Office</span> : Univero Singapore, Marina
+                Bay Street Circuit, Downtown Core, Central, Singapore 119587
+              </p>
+              <p><span>Email</span> : contact@unvo-health.com</p>
+              <p><span>Website</span> : www.unvo-health.com</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script type="module" src="product.js"></script>
     <script src="/script.js"></script>
-</body>
-
+  </body>
 </html>
