--- a/event/event.html
+++ b/event/event.html
@@ -1,97 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNVO Health</title>
-    <link rel="stylesheet" href="/event/event.css">
-    <link rel="stylesheet" href="/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-</head>
+    <link rel="stylesheet" href="/event/event.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <div id="navbar">
-        <nav>
-            <div id="logo">UNVO Health</div>
-            <div id="links">
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/event/event.html" class="active">Events</a></li>
-                    <li id="news"><a href="#">Products</a>
-                        <ul id="news_dropdown">
-                            <li id="pmr"><a href="/product/product1.html">Physical Medicine and Rehabilitation </a>
-                                <ul id="product_dropdown">
-                                    <li>Smart Robotic Series</li>
-                                    <li>Electrtotherapy</li>
-                                    <li>Passive and Active Exerciser</li>
-                                    <li>Physical Training</li>
-                                    <li>Heat and Cold Therapy</li>
-                                    <li>Balance Evaluation Series</li>
-                                    <li>Treatment Table</li>
-                                    <li>Tilt Table</li>
-                                    <li>Gait Training Device</li>
-                                    <li>Hydrotherapy</li>
-                                    <li>Air Compression Therapy</li>
-                                </ul>
-                            </li>
-                            <li id="simulation"><a href="/product/product2.html">Simulation Products</a>
-                                <ul id="product_dropdown2">
-                                    <li>Medical Series</li>
-                                    <li>Skeleton Series</li>
-                                    <li>Torso Series</li>
-                                    <li>Anatomical Series</li>
-                                    <li>Acupuncture Series</li>
-                                    <li>Biology Series</li>
-                                    <li>furniture Series</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="/contact/contact.html">Contact Us</a></li>
-                </ul>
-            </div>
-            <div id="menu">
-                <i class="ri-menu-3-line"></i>
-            </div>
-            <div id="close">
-                <i class="ri-close-large-line"></i>
-            </div>
-        </nav>
+      <nav>
+        <div id="logo">UNVO Health</div>
+        <div id="links">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/event/event.html" class="active">Events</a></li>
+            <li id="news">
+              <a href="#">Products</a>
+              <ul id="news_dropdown">
+                <li id="pmr">
+                  <a href="/product/product1.html"
+                    >Physical Medicine and Rehabilitation
+                  </a>
+                  <ul id="product_dropdown">
+                    <li>Smart Robotic Series</li>
+                    <li>Electrtotherapy</li>
+                    <li>Passive and Active Exerciser</li>
+                    <li>Physical Training</li>
+                    <li>Heat and Cold Therapy</li>
+                    <li>Balance Evaluation Series</li>
+                    <li>Treatment Table</li>
+                    <li>Tilt Table</li>
+                    <li>Gait Training Device</li>
+                    <li>Hydrotherapy</li>
+                    <li>Air Compression Therapy</li>
+                  </ul>
+                </li>
+                <li id="simulation">
+                  <a href="/product/product2.html">Simulation Products</a>
+                  <ul id="product_dropdown2">
+                    <li>Medical Series</li>
+                    <li>Skeleton Series</li>
+                    <li>Torso Series</li>
+                    <li>Anatomical Series</li>
+                    <li>Acupuncture Series</li>
+                    <li>Biology Series</li>
+                    <li>furniture Series</li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li><a href="/contact/contact.html">Contact Us</a></li>
+          </ul>
+        </div>
+        <div id="menu">
+          <i class="ri-menu-3-line"></i>
+        </div>
+        <div id="close">
+          <i class="ri-close-large-line"></i>
+        </div>
+      </nav>
     </div>
 
     <div id="event_page">
-        <div id="event_container">
-            <h1>Meet us</h1>
-            <p>Welcome to the Events page of RPI INTERNATIONAL INC, your trusted partner in providing cutting-edge medical
-                equipment and solutions. Here, we showcase a comprehensive list of our upcoming events, including
-                product demonstrations, educational webinars, conferences, and industry exhibitions. Whether you're a
-                healthcare provider, medical professional, or an industry enthusiast, our events offer valuable
-                opportunities to explore the latest advancements in medical technology, learn about innovative
-                equipment, and connect with experts in the field.</p>
-            <img src="/images/banner.png" alt="">
-        </div>
+      <div id="event_container">
+        <h1>Meet us</h1>
+        <p>
+          Welcome to the Events page of RPI INTERNATIONAL INC, your trusted
+          partner in providing cutting-edge medical equipment and solutions.
+          Here, we showcase a comprehensive list of our upcoming events,
+          including product demonstrations, educational webinars, conferences,
+          and industry exhibitions. Whether you're a healthcare provider,
+          medical professional, or an industry enthusiast, our events offer
+          valuable opportunities to explore the latest advancements in medical
+          technology, learn about innovative equipment, and connect with experts
+          in the field.
+        </p>
+        <img src="/images/banner.png" alt="" />
+      </div>
     </div>
 
     <div id="footer_panel">
-        <div id="footer_panel_container">
-            <div id="footer_panel2">
-                <div>
-                    <h2>Contact</h2>
-                </div>
-                <div>
-                    <p><span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800 Commercial Ave, Ellwood City, Pennsylvania, 16117,
-                        United States</p>
-                    <p><span>
-                        Global Supply Office</span> : Univero Singapore, Marina Bay Street Circuit, Downtown Core, Central, Singapore 119587</p>
-                    <p><span>Email</span> : contact@uno-health.com</p>
-                    <p><span>Website</span> : www.unvo-health.com</p>
-                </div>
-            </div>
+      <div id="footer_panel_container">
+        <div id="footer_panel2">
+          <div>
+            <h2>Contact</h2>
+          </div>
+          <div>
+            <p>
+              <span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800
+              Commercial Ave, Ellwood City, Pennsylvania, 16117, United States
+            </p>
+            <p>
+              <span> Global Supply Office</span> : Univero Singapore, Marina Bay
+              Street Circuit, Downtown Core, Central, Singapore 119587
+            </p>
+            <p><span>Email</span> : contact@unvo-health.com</p>
+            <p><span>Website</span> : www.unvo-health.com</p>
+          </div>
         </div>
+      </div>
     </div>
 
     <script src="/script.js"></script>
-</body>
-
+  </body>
 </html>
