--- a/product/product2.html
+++ b/product/product2.html
@@ -1,70 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNVO Health</title>
-    <link rel="stylesheet" href="product.css">
-    <link rel="stylesheet" href="/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-</head>
+    <link rel="stylesheet" href="product.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <div id="navbar">
-        <nav>
-            <div id="logo">UNVO Health</div>
-            <div id="links">
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/event/event.html">Events</a></li>
-                    <li id="news"><a href="#" class="active">Products</a>
-                        <ul id="news_dropdown">
-                            <li id="pmr"><a href="/product/product1.html">Physical Medicine and Rehabilitation </a>
-                                <ul id="product_dropdown">
-                                    <li>Smart Robotic Series</li>
-                                    <li>Electrtotherapy</li>
-                                    <li>Passive and Active Exerciser</li>
-                                    <li>Physical Training</li>
-                                    <li>Heat and Cold Therapy</li>
-                                    <li>Balance Evaluation Series</li>
-                                    <li>Treatment Table</li>
-                                    <li>Tilt Table</li>
-                                    <li>Gait Training Device</li>
-                                    <li>Hydrotherapy</li>
-                                    <li>Air Compression Therapy</li>
-                                </ul>
-                            </li>
-                            <li id="simulation"><a href="/product/product2.html" class="active">Simulation Products</a>
-                                <ul id="product_dropdown2">
-                                    <li>Medical Series</li>
-                                    <li>Skeleton Series</li>
-                                    <li>Torso Series</li>
-                                    <li>Anatomical Series</li>
-                                    <li>Acupuncture Series</li>
-                                    <li>Biology Series</li>
-                                    <li>furniture Series</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="/contact/contact.html">Contact Us</a></li>
-                </ul>
-            </div>
-            <div id="menu">
-                <i class="ri-menu-3-line"></i>
-            </div>
-            <div id="close">
-                <i class="ri-close-large-line"></i>
-            </div>
-        </nav>
-    </div>
-
-    <div id="product_main">
-        <div id="product1_container">
-            <div id="product_sidenav">
-                <h1>Simulation Products</h1>
-                <ul>
+      <nav>
+        <div id="logo">UNVO Health</div>
+        <div id="links">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/event/event.html">Events</a></li>
+            <li id="news">
+              <a href="#" class="active">Products</a>
+              <ul id="news_dropdown">
+                <li id="pmr">
+                  <a href="/product/product1.html"
+                    >Physical Medicine and Rehabilitation
+                  </a>
+                  <ul id="product_dropdown">
+                    <li>Smart Robotic Series</li>
+                    <li>Electrtotherapy</li>
+                    <li>Passive and Active Exerciser</li>
+                    <li>Physical Training</li>
+                    <li>Heat and Cold Therapy</li>
+                    <li>Balance Evaluation Series</li>
+                    <li>Treatment Table</li>
+                    <li>Tilt Table</li>
+                    <li>Gait Training Device</li>
+                    <li>Hydrotherapy</li>
+                    <li>Air Compression Therapy</li>
+                  </ul>
+                </li>
+                <li id="simulation">
+                  <a href="/product/product2.html" class="active"
+                    >Simulation Products</a
+                  >
+                  <ul id="product_dropdown2">
                     <li>Medical Series</li>
                     <li>Skeleton Series</li>
                     <li>Torso Series</li>
@@ -72,34 +52,65 @@
                     <li>Acupuncture Series</li>
                     <li>Biology Series</li>
                     <li>furniture Series</li>
-                </ul>
-            </div>
-            <div id="products">
-                <div id="product_name2"></div>
-            </div>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li><a href="/contact/contact.html">Contact Us</a></li>
+          </ul>
         </div>
+        <div id="menu">
+          <i class="ri-menu-3-line"></i>
+        </div>
+        <div id="close">
+          <i class="ri-close-large-line"></i>
+        </div>
+      </nav>
+    </div>
+
+    <div id="product_main">
+      <div id="product1_container">
+        <div id="product_sidenav">
+          <h1>Simulation Products</h1>
+          <ul>
+            <li>Medical Series</li>
+            <li>Skeleton Series</li>
+            <li>Torso Series</li>
+            <li>Anatomical Series</li>
+            <li>Acupuncture Series</li>
+            <li>Biology Series</li>
+            <li>furniture Series</li>
+          </ul>
+        </div>
+        <div id="products">
+          <div id="product_name2"></div>
+        </div>
+      </div>
     </div>
 
     <div id="footer_panel">
-        <div id="footer_panel_container">
-            <div id="footer_panel2">
-                <div>
-                    <h2>Contact</h2>
-                </div>
-                <div>
-                    <p><span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800 Commercial Ave, Ellwood City, Pennsylvania, 16117,
-                        United States</p>
-                    <p><span>
-                        Global Supply Office</span> : Univero Singapore, Marina Bay Street Circuit, Downtown Core, Central, Singapore 119587</p>
-                    <p><span>Email</span> : contact@uno-health.com</p>
-                    <p><span>Website</span> : www.unvo-health.com</p>
-                </div>
-            </div>
+      <div id="footer_panel_container">
+        <div id="footer_panel2">
+          <div>
+            <h2>Contact</h2>
+          </div>
+          <div>
+            <p>
+              <span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800
+              Commercial Ave, Ellwood City, Pennsylvania, 16117, United States
+            </p>
+            <p>
+              <span> Global Supply Office</span> : Univero Singapore, Marina Bay
+              Street Circuit, Downtown Core, Central, Singapore 119587
+            </p>
+            <p><span>Email</span> : contact@unvo-health.com</p>
+            <p><span>Website</span> : www.unvo-health.com</p>
+          </div>
         </div>
+      </div>
     </div>
 
     <script src="product2.js"></script>
     <script src="/script.js"></script>
-</body>
-
+  </body>
 </html>
