fixed name ipr to unvo health

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -88,8 +88,8 @@
               <div>
                 <h2>Head Office</h2>
                 <p>
-                  RPI INTERNATIONAL INC (USA), 800 Commercial Ave, Ellwood City,
-                  Pennsylvania, 16117, United States
+                  UNVO HEALTH INTERNATIONAL INC (USA), 800 Commercial Ave,
+                  Ellwood City, Pennsylvania, 16117, United States
                 </p>
               </div>
             </div>
@@ -100,7 +100,7 @@
               <div>
                 <h2>Global Supply Office</h2>
                 <p>
-                  Univero Singapore, Marina Bay Street Circuit, Downtown Core,
+                  UNVO HEALTH, Marina Bay Street Circuit, Downtown Core,
                   Central, Singapore 119587
                 </p>
               </div>
@@ -135,12 +135,13 @@
             </div>
             <div>
               <p>
-                <span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800
-                Commercial Ave, Ellwood City, Pennsylvania, 16117, United States
+                <span>Head Office</span> : UNVO HEALTH INTERNATIONAL INC (USA),
+                800 Commercial Ave, Ellwood City, Pennsylvania, 16117, United
+                States
               </p>
               <p>
-                <span> Global Supply Office</span> : Univero Singapore, Marina
-                Bay Street Circuit, Downtown Core, Central, Singapore 119587
+                <span> Global Supply Office</span> : UNVO HEALTH, Marina Bay
+                Street Circuit, Downtown Core, Central, Singapore 119587
               </p>
               <p><span>Email</span> : contact@unvo-health.com</p>
               <p><span>Website</span> : www.unvo-health.com</p>
