--- a/event/event.html
+++ b/event/event.html
@@ -70,15 +70,15 @@
       <div id="event_container">
         <h1>Meet us</h1>
         <p>
-          Welcome to the Events page of RPI INTERNATIONAL INC, your trusted
-          partner in providing cutting-edge medical equipment and solutions.
-          Here, we showcase a comprehensive list of our upcoming events,
-          including product demonstrations, educational webinars, conferences,
-          and industry exhibitions. Whether you're a healthcare provider,
-          medical professional, or an industry enthusiast, our events offer
-          valuable opportunities to explore the latest advancements in medical
-          technology, learn about innovative equipment, and connect with experts
-          in the field.
+          Welcome to the Events page of UNVO HEALTH INTERNATIONAL INC, your
+          trusted partner in providing cutting-edge medical equipment and
+          solutions. Here, we showcase a comprehensive list of our upcoming
+          events, including product demonstrations, educational webinars,
+          conferences, and industry exhibitions. Whether you're a healthcare
+          provider, medical professional, or an industry enthusiast, our events
+          offer valuable opportunities to explore the latest advancements in
+          medical technology, learn about innovative equipment, and connect with
+          experts in the field.
         </p>
         <img src="/images/banner.png" alt="" />
       </div>
@@ -92,11 +92,12 @@
           </div>
           <div>
             <p>
-              <span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800
-              Commercial Ave, Ellwood City, Pennsylvania, 16117, United States
+              <span>Head Office</span> : UNVO HEALTH INTERNATIONAL INC (USA),
+              800 Commercial Ave, Ellwood City, Pennsylvania, 16117, United
+              States
             </p>
             <p>
-              <span> Global Supply Office</span> : Univero Singapore, Marina Bay
+              <span> Global Supply Office</span> : UNVO HEALTH, Marina Bay
               Street Circuit, Downtown Core, Central, Singapore 119587
             </p>
             <p><span>Email</span> : contact@unvo-health.com</p>
