--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
             <div class="section_second">
               <h1>UNVO Health</h1>
               <p>
-                RPI INTERNATIONAL INC is a leading supplier of Predictive
-                Maintenance and Reliability (PMR) products and Simulation
-                technologies, providing innovative solutions that enhance the
-                efficiency, reliability, and performance of industrial
-                operations. With a strong commitment to delivering high-quality,
-                cutting-edge products, we enable businesses across multiple
-                sectors to minimize downtime, optimize maintenance strategies,
-                and simulate complex systems to make data-driven decisions that
-                drive success.
+                UNVO HEALTH INTERNATIONAL INC is a leading supplier of
+                Predictive Maintenance and Reliability (PMR) products and
+                Simulation technologies, providing innovative solutions that
+                enhance the efficiency, reliability, and performance of
+                industrial operations. With a strong commitment to delivering
+                high-quality, cutting-edge products, we enable businesses across
+                multiple sectors to minimize downtime, optimize maintenance
+                strategies, and simulate complex systems to make data-driven
+                decisions that drive success.
               </p>
             </div>
           </div>
@@ -122,9 +122,9 @@
             <div id="about_details">
               <p>
                 Hospital needs are one of the most essential things to be bought
-                and maintained well. We RPI INTERNATIONAL INC situated at United
-                States therefore, have the best of Physical Medicine and
-                Rehabilitation (PMR) and Simulation Products to get the best
+                and maintained well. We UNVO HEALTH INTERNATIONAL INC situated
+                at United States therefore, have the best of Physical Medicine
+                and Rehabilitation (PMR) and Simulation Products to get the best
                 result and make work easier. Our products retain a high
                 reputation for quality, excellence & innovation. We are
                 dedicated to providing the best equipment to enhance the
@@ -172,13 +172,13 @@
               </div>
               <div>
                 <p>
-                  <span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800
-                  Commercial Ave, Ellwood City, Pennsylvania, 16117, United
-                  States
+                  <span>Head Office</span> : UNVO HEALTH INTERNATIONAL INC
+                  (USA), 800 Commercial Ave, Ellwood City, Pennsylvania, 16117,
+                  United States
                 </p>
                 <p>
-                  <span> Global Supply Office</span> : Univero Singapore, Marina
-                  Bay Street Circuit, Downtown Core, Central, Singapore 119587
+                  <span> Global Supply Office</span> : UNVO HEALTH, Marina Bay
+                  Street Circuit, Downtown Core, Central, Singapore 119587
                 </p>
                 <p><span>Email</span> : contact@unvo-health.com</p>
                 <p><span>Website</span> : www.unvo-health.com</p>
