--- a/product/product1.html
+++ b/product/product1.html
@@ -99,12 +99,13 @@
             </div>
             <div>
               <p>
-                <span>Head Office</span> : RPI INTERNATIONAL INC (USA), 800
-                Commercial Ave, Ellwood City, Pennsylvania, 16117, United States
+                <span>Head Office</span> : UNVO HEALTH INTERNATIONAL INC (USA),
+                800 Commercial Ave, Ellwood City, Pennsylvania, 16117, United
+                States
               </p>
               <p>
-                <span> Global Supply Office</span> : Univero Singapore, Marina
-                Bay Street Circuit, Downtown Core, Central, Singapore 119587
+                <span> Global Supply Office</span> : UNVO HEALTH, Marina Bay
+                Street Circuit, Downtown Core, Central, Singapore 119587
               </p>
               <p><span>Email</span> : contact@unvo-health.com</p>
               <p><span>Website</span> : www.unvo-health.com</p>
